--- a/app/src/main/res/layout/content_places.xml
+++ b/app/src/main/res/layout/content_places.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".PlacesActivity"
+    tools:context=".activities.PlacesActivity"
     tools:showIn="@layout/activity_places">
 
     <TextView
+        android:id="@+id/places_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
