--- a/app/src/main/res/layout/content_places.xml
+++ b/app/src/main/res/layout/content_places.xml
@@ -7,10 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
+    android:padding="@dimen/padding_layout"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.PlacesActivity"
     tools:showIn="@layout/activity_places">
@@ -21,8 +18,8 @@
         android:layout_height="wrap_content" />
 
     <ListView
-        android:id="@+id/places_list"
+        android:id="@+id/list_places"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
