--- a/app/src/main/res/layout/list_item_place.xml
+++ b/app/src/main/res/layout/list_item_place.xml
@@ -4,40 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:gravity="start"
-    android:padding="2dp">
+    android:gravity="start">
 
     <TextView
-        android:id="@+id/name_text"
+        android:id="@+id/text_name"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3"
         android:gravity="center_vertical"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:textSize="18sp"
+        android:textSize="@dimen/textsize_big"
         android:text="Name" />
 
     <TextView
-        android:id="@+id/address_text"
+        android:id="@+id/text_address"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:gravity="center_vertical"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:textSize="12sp"
+        android:textSize="@dimen/textsize_medium"
         android:text="Address"/>
 
     <TextView
-        android:id="@+id/category_text"
+        android:id="@+id/text_category"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:gravity="center_vertical"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:textSize="12sp"
+        android:textSize="@dimen/textsize_medium"
         android:text="Category"/>
 
 </LinearLayout>
