--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#3D007A</color>
+    <color name="colorPrimaryDark">#25004B</color>
+    <color name="colorAccent">#7F00FF</color>
+
+    <color name="colorBackground">#232224</color>
+    <color name="colorForeground">#F1EEF3</color>
 </resources>
