--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,7 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="textsize_medium">12sp</dimen>
+    <dimen name="textsize_big">18sp</dimen>
+    <dimen name="padding_layout">10dp</dimen>
+    <dimen name="height_app_bar">180dp</dimen>
+    <dimen name="margin_fab">20dp</dimen>
 </resources>
