Refactoring with new API + Handling error responses

--- a/app/src/main/res/layout/content_place.xml
+++ b/app/src/main/res/layout/content_place.xml
@@ -31,12 +31,12 @@
             android:text="Place Name"/>
 
         <TextView
-            android:id="@+id/text_category"
+            android:id="@+id/text_tags"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="@dimen/textsize_medium"
-            android:text="Category"/>
+            android:text="Tags"/>
 
     </LinearLayout>
 
