--- a/app/src/main/res/layout/list_item_place.xml
+++ b/app/src/main/res/layout/list_item_place.xml
@@ -19,18 +19,18 @@
         android:id="@+id/text_address"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:gravity="center_vertical"
         android:textSize="@dimen/textsize_medium"
         android:text="Address"/>
 
     <TextView
-        android:id="@+id/text_category"
+        android:id="@+id/text_tags"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:gravity="center_vertical"
         android:textSize="@dimen/textsize_medium"
-        android:text="Category"/>
+        android:text="Tags"/>
 
 </LinearLayout>
