--- a/app/src/main/res/layout/list_item_place.xml
+++ b/app/src/main/res/layout/list_item_place.xml
@@ -12,8 +12,8 @@
         android:layout_height="match_parent"
         android:layout_weight="3"
         android:gravity="center_vertical"
-        android:textSize="@dimen/textsize_big"
-        android:text="Name" />
+        android:textSize="@dimen/textsize_medium"
+        android:text="@string/place_name" />
 
     <TextView
         android:id="@+id/text_address"
@@ -21,8 +21,8 @@
         android:layout_height="match_parent"
         android:layout_weight="3"
         android:gravity="center_vertical"
-        android:textSize="@dimen/textsize_medium"
-        android:text="Address"/>
+        android:textSize="@dimen/textsize_small"
+        android:text="@string/address"/>
 
     <TextView
         android:id="@+id/text_tags"
@@ -30,7 +30,7 @@
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:gravity="center_vertical"
-        android:textSize="@dimen/textsize_medium"
-        android:text="Tags"/>
+        android:textSize="@dimen/textsize_tiny"
+        android:text="@string/tags"/>
 
 </LinearLayout>
