--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -14,19 +14,19 @@
             android:id="@+id/user_text"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:gravity="center_vertical"
-            android:textSize="@dimen/textsize_big"
-            android:text="User" />
+            android:textSize="@dimen/textsize_medium"
+            android:text="@string/user" />
 
         <TextView
             android:id="@+id/rating_text"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:gravity="center_vertical"
-            android:textSize="@dimen/textsize_big"
-            android:text="Rating"/>
+            android:textSize="@dimen/textsize_medium"
+            android:text="@string/rating"/>
 
     </LinearLayout>
 
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:textSize="@dimen/textsize_medium"
-        android:text="Comment"/>
+        android:textSize="@dimen/textsize_small"
+        android:text="@string/comment"/>
 
 </LinearLayout>
