--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,24 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <!-- Base application theme -->
+    <style name="AppTheme" parent="Theme.AppCompat">
+        <item name="radioButtonStyle">@style/RadioButtonStyle</item>
+        <item name="toolbarStyle">@style/ToolbarStyle</item>
+        <item name="android:textViewStyle">@style/TextViewStyle</item>
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorButtonNormal">@color/colorAccent</item>
-        <item name="radioButtonStyle">@style/RadioButtonStyle</item>
+
 
         <item name="android:colorBackground">@color/colorBackground</item>
         <item name="android:colorForeground">@color/colorForeground</item>
         <item name="android:colorAccent">@color/colorAccent</item>
         <item name="android:textColor">@color/colorForeground</item>
         <item name="android:colorBackgroundFloating">@color/colorBackground</item>
+
+        <item name="android:textSize">@dimen/textsize_medium</item>
     </style>
 
     <style name="AppTheme.NoActionBar" parent="AppTheme">
@@ -25,21 +30,12 @@
         <item name="android:textColor">@color/colorForeground</item>
     </style>
 
+    <style name="ToolbarStyle" parent="android:Widget.Toolbar">
+        <item name="android:background">@color/colorPrimaryDark</item>
+    </style>
 
-
-    <!--<style name="Widget.Group" parent="@android:style/Widget">-->
-    <!--<item name="android:layout_width">match_parent</item>-->
-    <!--<item name="android:layout_height">20dp</item>-->
-    <!--<item name="android:background">@color/colorGuiGray</item>-->
-    <!--<item name="android:layout_margin">5dp</item>-->
-    <!--<item name="android:padding">5dp</item>-->
-    <!--<item name="colorPrimary">@color/colorPrimary</item>-->
-    <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
-    <!--<item name="colorAccent">@color/colorAccent</item>-->
-    <!--</style>-->
-
-    <!--<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />-->
-
-    <!--<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark" />-->
+    <style name="TextViewStyle" parent="android:Widget.TextView">
+        <item name="android:padding">@dimen/padding</item>
+    </style>
 
 </resources>
