--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -26,7 +26,7 @@
             android:layout_weight="2"
             android:gravity="center_vertical"
             android:textSize="@dimen/textsize_medium"
-            android:text="@string/rating"/>
+            android:text="@string/rating_label"/>
 
     </LinearLayout>
 
@@ -36,6 +36,6 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:textSize="@dimen/textsize_small"
-        android:text="@string/comment"/>
+        android:text="@string/comment_label"/>
 
 </LinearLayout>
