--- a/app/src/main/res/menu/menu_places.xml
+++ b/app/src/main/res/menu/menu_places.xml
@@ -6,12 +6,12 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/settings"
         app:showAsAction="never" />
 
     <item android:id="@+id/search"
         android:orderInCategory="0"
-        android:title="@string/search_title"
+        android:title="@string/search"
         android:icon="@drawable/ic_search"
         app:showAsAction="ifRoom"
         app:actionViewClass="android.support.v7.widget.SearchView" />
