--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -22,6 +22,11 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -83,7 +88,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="top|start"
-            android:inputType="textMultiLine"
+            android:inputType="textImeMultiLine"
+            android:imeOptions="actionSend"
             android:autofillHints="@string/comment_hint"/>
 
         <Button
