--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -14,7 +14,7 @@
         android:padding="@dimen/padding">
 
         <TextView
-            android:id="@+id/text_name"
+            android:id="@+id/text_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/textsize_big"
