--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -32,7 +32,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/text_name"
+                        android:id="@+id/text_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/textsize_big"
