--- a/app/src/main/res/layout/list_item_place.xml
+++ b/app/src/main/res/layout/list_item_place.xml
@@ -7,7 +7,7 @@
     android:gravity="start">
 
     <TextView
-        android:id="@+id/text_name"
+        android:id="@+id/text_title"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3"
