--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -25,7 +25,8 @@
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +37,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/rating_label"/>
+            android:text="@string/rating"/>
 
         <RadioGroup
             android:id="@+id/radio_group_rating"
@@ -76,12 +77,6 @@
 
         </RadioGroup>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:labelFor="@id/edit_comment"
-            android:text="@string/comment_label"/>
-
         <EditText
             android:id="@+id/edit_comment"
             android:layout_width="match_parent"
@@ -90,7 +85,8 @@
             android:gravity="top|start"
             android:inputType="textImeMultiLine"
             android:imeOptions="actionSend"
-            android:autofillHints="@string/comment_hint"/>
+            android:hint="@string/tags"
+            android:autofillHints="@string/comment"/>
 
         <Button
             android:id="@+id/button_save"
