--- a/app/src/main/res/layout/list_item_place.xml
+++ b/app/src/main/res/layout/list_item_place.xml
@@ -13,7 +13,7 @@
         android:layout_weight="3"
         android:gravity="center_vertical"
         android:textSize="@dimen/textsize_medium"
-        android:text="@string/place_name_label" />
+        android:text="@string/place_name" />
 
     <TextView
         android:id="@+id/text_address"
@@ -31,6 +31,6 @@
         android:layout_weight="2"
         android:gravity="center_vertical"
         android:textSize="@dimen/textsize_tiny"
-        android:text="@string/tags_label"/>
+        android:text="@string/tags"/>
 
 </LinearLayout>
