--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/padding">
 
         <EditText
             android:id="@+id/edit_email"
@@ -61,11 +62,23 @@
             android:layout_height="wrap_content"
             android:text="@string/login"/>
 
+        <!--<com.google.android.gms.common.SignInButton-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="@dimen/textsize_medium"/>-->
+
         <Button
             android:id="@+id/button_google"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Google login"/>
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button_facebook"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="4dp"
+            android:textSize="@dimen/textsize_medium"/>
 
         <Button
             android:id="@+id/button_facebook"
